--- a/src/app/main-page/main-page/main-page.component.html
+++ b/src/app/main-page/main-page/main-page.component.html
@@ -1,25 +1,19 @@
-<p>main-page works!</p>
-<!-- <div class="container">
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-      <ng-container matColumnDef="title">
-        <th mat-header-cell *matHeaderCellDef>title</th>
-        <td mat-cell *matCellDef="let book">{{book.title}}</td>
-    </ng-container>
-      <ng-container matColumnDef="description">
-        <th mat-header-cell *matHeaderCellDef>description</th>
-        <td mat-cell *matCellDef="let book">{{book.description.slice(0,10)}}</td>
-        
-    </ng-container>
-      <ng-container matColumnDef="pageCount">
-        <th mat-header-cell *matHeaderCellDef>pageCount</th>
-        <td mat-cell *matCellDef="let book">{{book.pageCount}}</td>
-    </ng-container>
-      <ng-container matColumnDef="publishDate">
-        <th mat-header-cell *matHeaderCellDef>publishDate</th>
-        <td mat-cell *matCellDef="let book">{{book.publishDate}}</td>
-    </ng-container>
-  
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-  </div> -->
+<div class="book">
+  <div class="spinner-container" *ngIf="dataSource.loading$ | async">
+    <mat-spinner></mat-spinner>
+  </div>
+
+  <mat-table [dataSource]="dataSource">
+    <div *ngFor="let elem of displayedColumns">
+      <ng-container matColumnDef="{{elem}}">
+        <mat-header-cell *matHeaderCellDef>{{elem}}</mat-header-cell>
+        <mat-cell *matCellDef="let book">{{book[elem]}}</mat-cell>
+      </ng-container>
+    </div>
+
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+
+    <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+
+  </mat-table>
+</div>
